force-app/main/default/objects/Territory_Assignment__c/Territory_Assignment__c.object-meta.xml
<CustomObject>
    <label>Territory Assignment</label>
    <nameField>
        <label>Territory Assignment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>