force-app/main/default/objects/Territory_Assignment__c/fields/ADR__c.field-meta.xml
<CustomField>
    <fullName>ADR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ADR</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>ADR</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>ADR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_Assignments2</relationshipName>
    <type>Lookup</type>
</CustomField>