force-app/main/default/objects/Territory_Assignment__c/fields/AE__c.field-meta.xml
<CustomField>
    <fullName>AE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 3 OR 4) AND 2</booleanFilter>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>AE</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Outside Sales</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>AE Director</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>SA</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>