force-app/main/default/objects/Territory_Assignment__c/fields/SA__c.field-meta.xml
<CustomField>
    <fullName>SA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SA</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>SA</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Outside Sales</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_Assignments1</relationshipName>
    <type>Lookup</type>
</CustomField>