force-app/main/default/objects/Territory_Assignment__c/fields/Zip_Code_Split__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Split__c</fullName>
    <label>Zip Code Split</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Zip_Code_Split</valueSetName>
    </valueSet>
</CustomField>