force-app/main/default/objects/Territory_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>State_Province__c</columns>
    <columns>Zip_Code_Split__c</columns>
    <columns>Company_First_Letter__c</columns>
    <columns>AE__c</columns>
    <columns>SA__c</columns>
    <columns>ADR__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>